--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    background-color: radial-gradient(rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
+    background-color: #0c111d;
 }
